--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_round"
@@ -24,8 +22,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,8 +32,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_main"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RegisterActivity" />
 
@@ -54,11 +52,16 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".ResourcesMaps"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".SendActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ResourcesMaps"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SendActivity"
+            android:screenOrientation="portrait" />
+
         <uses-library android:name="com.google.android.maps" />
+
+        <activity android:name=".DonationActivity"></activity>
     </application>
 
 </manifest>
