--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/mysql-connector-java-3.0.17-ga-bin.jar')
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'  //25.1.0
     compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2' //1.0.2
+    compile 'com.google.android.gms:play-services-maps:11.0.1'
     testCompile 'junit:junit:4.12'
 
     compile 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
